# pyise-ers

./: .coveragerc  .gitignore  .pyup.yml  Makefile  Pipfile  README.md  codecov.yml  coverage.xml  cream.py  ise.py  pyiseers.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-publish-pypi.txt  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  publish_to_pypi.yml
pyise_ers/: pyiseers.py
pyiseers/: __init__.py
test/: config-DEFAULT.py  generate_random_endpoints.py  manual_test_ers.py  notest_ers.py  temp_update_test.py  test_ers.py  test_ise.py  test_ise_27.py  test_ise_30.py  test_ise_31.py
test/cassettes/: test_update_endpoint.yaml
test/cassettes/test_ise_27/: test_add_device.yaml  test_add_device_group.yaml  test_add_device_payload.yaml  test_add_egressmatrixcell.yaml  test_add_endpoint.yaml  test_add_sgacl.yaml  test_add_sgt.yaml  test_add_user.yaml  test_delete_device.yaml  test_delete_device_group.yaml  test_delete_egressmatrixcell.yaml  test_delete_endpoint.yaml  test_delete_sgacl.yaml  test_delete_sgt.yaml  test_delete_user.yaml  test_get_device.yaml  test_get_device_group.yaml  test_get_device_group_from_name.yaml  test_get_device_groups.yaml  test_get_devices.yaml  test_get_egressmatrixcell.yaml  test_get_egressmatrixcells.yaml  test_get_endpoint.yaml  test_get_endpoint_group.yaml  test_get_endpoint_groups.yaml  test_get_endpoints.yaml  test_get_identity_group.yaml  test_get_identity_groups.yaml  test_get_sgacl.yaml  test_get_sgacls.yaml  test_get_sgt.yaml  test_get_sgts.yaml  test_get_user.yaml  test_get_users.yaml  test_update_device.yaml  test_update_device_group.yaml  test_update_egressmatrixcell.yaml  test_update_sgacl.yaml  test_update_sgt.yaml
test/cassettes/test_ise_30/: test_add_device.yaml  test_add_device_group.yaml  test_add_device_payload.yaml  test_add_egressmatrixcell.yaml  test_add_endpoint.yaml  test_add_sgacl.yaml  test_add_sgt.yaml  test_add_user.yaml  test_delete_device.yaml  test_delete_device_group.yaml  test_delete_egressmatrixcell.yaml  test_delete_endpoint.yaml  test_delete_sgacl.yaml  test_delete_sgt.yaml  test_delete_user.yaml  test_get_device.yaml  test_get_device_group.yaml  test_get_device_group_from_name.yaml  test_get_device_groups.yaml  test_get_devices.yaml  test_get_egressmatrixcell.yaml  test_get_egressmatrixcells.yaml  test_get_endpoint.yaml  test_get_endpoint_group.yaml  test_get_endpoint_groups.yaml  test_get_endpoints.yaml  test_get_identity_group.yaml  test_get_identity_groups.yaml  test_get_sgacl.yaml  (+10 more)
