[tool.poetry]
name = "pyise-ers"
version = "0.3-dev"
description = "ISE-ERS API Wrapper"
authors = ["Falk <falk@mockel.se>"]
license = "GPL"
readme = "README.md"
packages = [
    { include = "pyise_ers" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
furl = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pytest-cov = "^4.1.0"
ptpython = "^3.0.23"
codecov = "^2.1.13"
setuptools = "^67.8.0"
twine = "^4.0.2"
wheel = "^0.40.0"
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
