[tool.poetry]
name = "pyise-ers"
version = "0.3.0.3"
description = "Python wrapper for Cisco ISE ERS API"
authors = ["Andreas Falk <falk@mockel.se>"]
keywords=['poetry']
classifiers = [
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]
include = ['LICENSE']
readme = "README.md"
packages = [
    { include = "pyiseers" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
furl = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pytest-cov = "^4.1.0"
ptpython = "^3.0.23"
codecov = "^2.1.13"
setuptools = "^67.8.0"
twine = "^4.0.2"
wheel = "^0.40.0"
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"
pyment = "^0.3.3"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B106", "B311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
